[project]
name = "fruit_lookup_dwoodv2"
version = "0.0.1"
authors = [
  { name="David Wood", email="david_wood_11@outlook.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/dwoodv2/UoM-ResearchSW-Task"
Issues = "https://github.com/dwoodv2/UoM-ResearchSW-Task/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["."]
